--- a/views/failure.ejs
+++ b/views/failure.ejs
@@ -10,11 +10,11 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   
 </head>
-<body style="background-color: #e9ecef;">
+<body>
   <div class="jumbotron text-center">
     <h1 class="">FAILED<span style="color: rgb(153, 0, 0);">!</span></h1>
-    <p class="lead"><strong>There was problem getting <span style="color: purple;">weather data.</span></strong></p>
-    <p style="text-decoration: underline;">Please enter a valid city name.</p>
+    <p class="lead"><strong>Please enter both <span style="color: crimson;">STATE AND DISTRICT</span>.</strong> Please try again.</p>
+    <p style="font-size: smaller;"> note: state wise data is present at the bottom most of the page</p>
     <hr style="background-color: darkgoldenrod;">
     
     <form action="/failure" method="POST">
