--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,19 +1,13 @@
 
 
-          <!-- jquery -->
-          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
           <!-- chart.js -->
           <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
-          <!-- fontawesome icons -->
-          <script src="https://kit.fontawesome.com/e1f675ff60.js" crossorigin="anonymous"></script>
           <!-- custom js -->
           <script src="/chart/myChart.js"></script>
-          <!-- feather-icons -->
-          <!-- Icons -->
-          <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
-          <script>
-            feather.replace()
-          </script>
+          <!-- jquery -->
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+          <!-- js for dropdown state and district select -->
+          <script src="/js/index.js"></script>
 </body>
 
 </html>
