--- a/views/partials/resultHeader.ejs
+++ b/views/partials/resultHeader.ejs
@@ -14,6 +14,10 @@
 
   <!-- css styles -->
   <link rel="stylesheet" href="./css/result.css">
+  <link rel="stylesheet" href="./css/common-style.css">
+
+  <!-- fontawesome -->
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
 </head>
 
