--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,24 @@
 <%- include('partials/header') -%> 
 
-  <nav class="navbar sticky-top flex-md-nowrap p-0">
+  <nav class="navbar flex-md-nowrap p-0">
     <p class="navbar-brand" >CoviTrack <span>INDIA</span></p>
-    <form action="/" method="POST">
-      <input class="searchInput form-control bg-dark w-100" name="districtInput" type="text" placeholder="Search"
-        aria-label="Search">
+    <form action="/" method="POST" class="form-inline">
+
+      <select name="stateSelect" id="stateSelect" class="btn btn-outline-dark stateSelect mr-2" >
+        <option value="" >Select state</option>
+      </select>
+
+      <select name="districtSelect" id="districtSelect" class="btn btn-outline-dark districtSelect mr-2">
+        <option value="">Select state before district</option>
+      </select>
+
+      <button class="btn btn-outline-info mr-2"><i class="fas fa-search mr-2"></i>search</button>
     </form>
   </nav>
 
 
   <div class="container-fluid">
-      <main role="main" class=" col-sm-12 ml-sm-auto col pt-3 px-4">
+      <main role="main" class=" col-sm-12 ml-sm-auto pt-3 px-4">
         <h1 class="font-weight-bolder">India</h1>
         <hr>
         <div class="row h-auto m-2">
@@ -35,54 +43,44 @@
             <hr>
             <h6>% Fully vaccinated</h6>
             <h2 class="data-text"><%=percentageFullyVaccinatedEJS%>%</h2>
-            <p class="m-0 text-lg-right"> Timestamp Updated <span>05/22/2021 09:00 PMIST</span></p>
           </div>
+          <p class="time-stamp ml-auto">Source: MOHFW · <a target="_blank" href="https://covid19india.org">Covid19India.org</a></p>
         </div>
-        <hr class="break-line-strong">
+        <hr class="break-line-strong mt-5">
 
-        <canvas id="myChart" width="800" height="400"></canvas>
+        <div class="mt-5-custom text-center">
+          <h4 class="mb-5 mt-5">Cavid19 graphic representation (India)</h4>
+          <canvas id="myChart" width="800" height="400"></canvas>
+        </div>
 
-        <h2>Section title</h2>
-        <div class="table-responsive">
-          <table class="table table-striped table-sm">
-            <thead>
+        <hr class="break-line-strong mt-5">
+        
+        <h2 class="mt-5 mb-5 text-center states-heading">States / Union Territories</h2>
+        <p><div style="width:20px; height:15px; background-color: rgba(255, 0, 0, 0.404); display: inline-block;"></div><span> Top 5 states with <span style="color: rgb(218, 44, 0);">HIGHEST ACTIVE</span> cases</span></p>
+        <p><div style="width:20px; height:15px; background-color: rgba(0, 128, 0, 0.268); display: inline-block;"></div><span> Top 5 states with <span style="color: rgb(0, 110, 0);">LOWEST ACTIVE</span>  cases</span></p>
+        <div class="table-responsive mt-2">
+          <table class="table table-striped table-lg">
+            <thead class="table-dark">
               <tr>
-                <th>#</th>
-                <th>Header</th>
-                <th>Header</th>
-                <th>Header</th>
-                <th>Header</th>
+                <th>State/UT</th>
+                <th>Confirmed</th>
+                <th>Active</th>
+                <th>Recovered</th>
+                <th>Deceased</th>
+                <th class="w-25">Vaccinated</th>
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <td>1,003</td>
-                <td>libero</td>
-                <td>Sed</td>
-                <td>cursus</td>
-                <td>ante</td>
-              </tr>
-              <tr>
-                <td>1,004</td>
-                <td>dapibus</td>
-                <td>diam</td>
-                <td>Sed</td>
-                <td>nisi</td>
-              </tr>
-              <tr>
-                <td>1,005</td>
-                <td>Nulla</td>
-                <td>quis</td>
-                <td>sem</td>
-                <td>at</td>
-              </tr>
-              <tr>
-                <td>1,006</td>
-                <td>nibh</td>
-                <td>elementum</td>
-                <td>imperdiet</td>
-                <td>Duis</td>
-              </tr>
+              <% for(var i = 0; i<stateNamesEJS.length; i++){ %>
+                <tr>
+                  <td class="stateName"><%= stateNamesEJS[i] %> </td>
+                  <td><%= stateConfirmedEJS[i] %> </td>
+                  <td class="activeCases"><%= stateActiveEJS[i] %> </td>
+                  <td><%= stateRecoveredEJS[i] %> </td>
+                  <td><%= stateDeceasedEJS[i] %> </td>
+                  <td><%= stateVaccinatedEJS[i] %> </td>
+                </tr>
+              <% } %>
             </tbody>
           </table>
         </div>
@@ -102,7 +100,6 @@
         <%= monthDates[i] %>
       </p>
      <% } %>
-
 
 <%- include('partials/footer') -%> 
 
