--- a/views/result.ejs
+++ b/views/result.ejs
@@ -75,7 +75,7 @@
           <canvas id="myChart" width="800" height="400"></canvas>
         </div>
 
-        <hr class="break-line-strong">
+        <hr class="break-line-strong mt-5">
         
         <h2 class="mt-5 mb-4 text-center states-heading">States / Union Territories</h2>
         <p><div style="width:20px; height:15px; background-color: rgba(255, 0, 0, 0.404); display: inline-block;"></div><span> Top 5 states with <span style="color: rgb(218, 44, 0);">HIGHEST ACTIVE</span> cases</span></p>
