--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,18 @@
+<footer id="footer" class="text-center padding-primary border-top">
 
+    <a href="https://www.linkedin.com/in/pratik-karale-10461313a"><i class="fab fa-linkedin-in footer-icon"></i></a>
+    <a href="https://github.com/pratikkarale"><i class="fab fa-github footer-icon"></i></a> 
+
+    <p class="footer-text">The whole and soul of this web application is developed by <span class="name">Pratik Karale</span></p>
+    <p>Give me<a href="mailto:pratikkarale2001@gmail.com"> feedback!</a></p>
+
+    <p class="footer-text font-weight-bold">Tech-Stack Used</p>
+    <p>front-end : HTML, CSS, JAVASCRIPT, BOOTSTRAP</p>
+    <p>data visualization (covid19 graph) : CHART.JS</p>
+    <p>back-end : NODE.JS, EXPRESS.JS , GIT</p>
+    <p>tools : EJS, GIT, JQUERY</p>
+    <p>hosting : HEROKU </p>
+  </footer>
 
           <!-- chart.js -->
           <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
