--- a/views/result.ejs
+++ b/views/result.ejs
@@ -1,18 +1,18 @@
-<%- include('partials/resultHeader') -%> 
+<%- include('partials/header') -%> 
 
-  <nav class="navbar flex-md-nowrap p-0">
-    <p class="navbar-brand" >CoviTrack <span>INDIA</span></p>
+  <nav class="navbar bg-dark flex-md-nowrap sticky-top p-1">
+    <p class="navbar-brand">Covid Tracker India</p>
     <form action="/" method="POST" class="form-inline">
 
-      <select name="stateSelect" id="stateSelect" class="btn btn-outline-dark stateSelect mr-2" >
+      <select name="stateSelect" id="stateSelect" class="btn btn-light stateSelect mr-2" >
         <option value="" >Select state</option>
       </select>
 
-      <select name="districtSelect" id="districtSelect" class="btn btn-outline-dark districtSelect mr-2">
-        <option value="">Select state first</option>
+      <select name="districtSelect" id="districtSelect" class="btn btn-light districtSelect mr-2">
+        <option value="">Select state before district</option>
       </select>
 
-      <button class="btn btn-outline-info mr-2"><i class="fas fa-search mr-2"></i>search</button>
+      <button type="submit" class="btn pl-3 btn-success mr-2"><i class="fas fa-search mr-2"></i></button>
     </form>
   </nav>
 
@@ -44,42 +44,57 @@
 
           <hr class="mb-4">
           <div class="data-section row">
-            <div class="col-lg-3 mb-4 mt-2 active-cases data-box">
-              <h6>Active</h6>
+            <div class="col-lg-6 cases data-box">
+              <h3 class="mb-4">Cases</h3>
+              <h6><span style="color: rgb(255, 166, 0);">●</span> Active</h6>
               <p class="">
                 <%= activeEJS %>
               </p>
-            </div>  
-            <hr>
-            <div class="col-lg-3 mb-4 mt-2 confirmed data-box ">
-              <h6>Confirmed</h6>
+              <hr>
+              <h6><span>●</span> Confirmed</h6>
               <p class="">
                 <%= confirmedEJS %>
               </p>
-            </div>
-            <hr>
-            <div class="col-lg-3 mb-4 mt-2 deaths data-box ">
-              <h6> Deaths </h6>
+              <hr>
+              <h6><span style="color: rgba(255, 0, 0, 0.973);">●</span> Deaths </h6>
               <p class="">
                 <%= deathsEJS %> 
               </p>
+
+              <hr>
+              <h6><span style="color: rgba(20, 175, 0, 0.973);">●</span> recovered </h6>
+              <p class="">
+                <%= recoveredEJS %> 
+              </p>
+            </div>  
+            <div class="col-lg-6 vaccination data-box ">
+              <h3 class="mb-4">Vaccination</h3>
+              <h6><span style="color: rgba(0, 132, 255, 0.89);">●</span> Vaccinated <i class="fas fa-syringe"></i></h6>
+              <p class="">
+                <%= vaccinatedEJS %>
+              </p>
+              <hr>
+
+              <h6><span style="color: rgba(0, 132, 255, 0.89);">●</span> % vaccinated</h6>
+              <p class="">
+                <%= pVaccinatedEJS %> %
+              </p>
+              <!-- <hr> -->
             </div>
           </div>
-          <p class="time-stamp">Source: MOHFW · <a target="_blank" href="https://covid19india.org">Covid19India.org</a></p>
+          <p class="source-stamp">Source: MOHFW · <a target="_blank" href="https://covid19india.org">Covid19India.org</a></p>
         </div>
 
         <hr class="last">
 
-        <div class="mt-5-custom text-center">
-          <h4 class="mb-5">Cavid19 graphic representation (India)</h4>
+        <div class="mt-5-custom text-center myChart">
+          <h4 class="mb-5">Covid19 in India - last week graphical representation</h4>
           <canvas id="myChart" width="800" height="400"></canvas>
         </div>
 
         <hr class="break-line-strong mt-5">
         
         <h2 class="mt-5 mb-4 text-center states-heading">States / Union Territories</h2>
-        <p><div style="width:20px; height:15px; background-color: rgba(255, 0, 0, 0.404); display: inline-block;"></div><span> Top 5 states with <span style="color: rgb(218, 44, 0);">HIGHEST ACTIVE</span> cases</span></p>
-        <p><div style="width:20px; height:15px; background-color: rgba(0, 128, 0, 0.268); display: inline-block;"></div><span> Top 5 states with <span style="color: rgb(0, 110, 0);">LOWEST ACTIVE</span>  cases</span></p>
         <div class="table-responsive mt-2">
           <table class="table table-striped table-lg">
             <thead class="table-dark">
