--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,8 +12,7 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
   <!-- css styles -->
-  <link rel="stylesheet" href="./css/index-style.css">
-  <link rel="stylesheet" href="./css/common-style.css">
+  <link rel="stylesheet" href="./css/style.css">
 
   <!-- fontawesome -->
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
