--- a/views/result.ejs
+++ b/views/result.ejs
@@ -45,7 +45,7 @@
           <hr class="mb-4">
           <div class="data-section row">
             <div class="col-lg-6 cases data-box">
-              <h3 class="mb-4">Cases</h3>
+              <h3 class="mb-4 box-heading">Cases</h3>
               <h6><span style="color: rgb(255, 166, 0);">●</span> Active</h6>
               <p class="">
                 <%= activeEJS %>
@@ -68,7 +68,7 @@
               </p>
             </div>  
             <div class="col-lg-6 vaccination data-box ">
-              <h3 class="mb-4">Vaccination</h3>
+              <h3 class="mb-4 box-heading">Vaccination</h3>
               <h6><span style="color: rgba(0, 132, 255, 0.89);">●</span> Vaccinated <i class="fas fa-syringe"></i></h6>
               <p class="">
                 <%= vaccinatedEJS %>
