brandname changed to covitracker india

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') -%> 
 
   <nav class="navbar bg-dark flex-md-nowrap sticky-top p-1">
-    <p class="navbar-brand">Covid Tracker India</p>
+    <p class="navbar-brand">CoviTracker India</p>
     <form action="/" method="POST" class="form-inline">
 
       <select name="stateSelect" id="stateSelect" class="btn btn-light stateSelect mr-2" >
